--- a/package.json
+++ b/package.json
@@ -38,10 +38,20 @@
     "onCommand:extension.load-example",
     "onCommand:extension.showPinMap",
     "onLanguage:python",
-    "onDebug"
+    "onDebug",
+    "onView:micro-bit-python.view"
   ],
   "main": "./src/main.js",
   "contributes": {
+    "views": {
+      "explorer": [
+        {
+          "type": "webview",
+          "id": "micro-bit-python.view",
+          "name": "micro:bit python"
+        }
+      ]
+    },
     "commands": [
       {
         "command": "extension.init",
@@ -107,8 +117,11 @@
   ],
   "scripts": {
     "lint": "eslint .",
-    "build": "vsce package",
-    "publish": "vsce publish"
+    "build_extension": "vsce package",
+    "publish": "vsce publish",
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public --no-cleaode "
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
@@ -119,12 +132,22 @@
     "glob": "^7.1.6",
     "mocha": "^8.2.1",
     "typescript": "^4.1.3",
-    "vscode-test": "^1.5.0"
+    "vscode-test": "^1.5.0",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "rollup": "^2.3.4",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "svelte": "^3.37.0",
+    "svelte-awesome": "^2.3.1"
   },
   "dependencies": {
     "fs": "0.0.1-security",
     "git-clone": "^0.1.0",
     "internet-available": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sirv-cli": "^1.0.0"
   }
 }
